refactor(server): clean up TestUtils
- Route createApiClient through the shared ApiClientUtils construction
  path. ApiClientFactory itself cannot be referenced from server tests
  (the spark connector's tests depend on the server module, so
  server -> connector would be a cycle), but both now share the same
  underlying ApiClientUtils.create path, which is the intent of #1181.
- Make the utility class final with a private constructor.
- Make the shared PROPERTIES / NEW_PROPERTIES constants immutable so a
  test mutating them cannot poison later tests; the one caller needing
  mutability already makes a defensive copy.

Fixes #1181

Signed-off-by: tiennguyen-onehouse <tien@onehouse.ai>